   * efl: Introduce general Efl.Config API
   * Ui text: add cursor_new method
   * efl: Add Efl.Version struct and APIs
   * eolian: add support for static and terminated arrays
   * eo base - add weak object refs as per jpeg needs
   * elput: Add API function to return output name associated with input device
   * Eo refcount: Split the refcount to private and public (user).

Fixes:

   * hover: Made hover itself unfocusable.
   * elm_list/focus: @bugfix crashes with empty lists and unfocused elements.
   * @fix homogeneous genlist recalc on theme change (T1023)
   * @fix slider popup creation with custom themes
   * @fix broken slider popup hide logic
   * diskselector: Fix segmentation fault (T988)
   * object_item: Check null in elm_object_item_del.
   * naviframe: Emit visible signal to edc theme when first item is pushed
   * fix ctxpopup getting min size from content immediately on set
   * Fix bug of moving cursor handler
   * entry - fix menu to not popup after every time mobile sel handles are clicked
   * elm: Add Drm Detection
   * Avoid Month wrapping by ignoring summer time correction.
   * elm_widget: @fix use of uninitialized values.
   * naviframe: Fix smart_show function to show only top item view
   * license: update FSF address. (T1042)
   * entry - send selection,cleared signal if a selection is dismissed.
   * @fix slider overlay parenting
   * actionslider: Fixed mouse movement issue.
   * elm_win: Unbreak the ABI break of window type.
   * Remove silencing of errors when called on non elm widgets.
   * theme overlays - fix to prepend on overlay to be semantically consistent
   * entry - fixed calc issue of the wrap none mode.
   * segment_control, toolbar: Fixed broken scale of widget item.
   * entry - entry did word wrapping even the mode was ELM_WRAP_NONE.
   * Focus: fix segfault due to bad call to Eo function.
   * list/genlist: Fixed Home and End key event handling routine.
   * Accessibility: unref the object only if it exists.